fix null-proof contains method